:bug: Fix workspace context menu in small screens

--- a/frontend/src/app/main/ui/workspace/text_palette_ctx_menu.scss
+++ b/frontend/src/app/main/ui/workspace/text_palette_ctx_menu.scss
@@ -6,7 +6,7 @@
 
 @import "refactor/common-refactor.scss";
 
-.workspace-context-menu {
+.text-context-menu {
   position: absolute;
   left: auto;
   bottom: var(--height);
