--- a/frontend/src/app/main/ui/workspace/context_menu.scss
+++ b/frontend/src/app/main/ui/workspace/context_menu.scss
@@ -20,6 +20,8 @@
   border: $s-2 solid var(--panel-border-color);
   background-color: var(--menu-background-color);
   z-index: $z-index-4;
+  max-height: 100vh;
+  overflow-y: auto;
 }
 
 .separator {
