--- a/frontend/src/app/main/ui/dashboard.scss
+++ b/frontend/src/app/main/ui/dashboard.scss
@@ -7,6 +7,7 @@
 @use "refactor/common-refactor.scss" as *;
 
 .dashboard {
+  @extend .new-scrollbar;
   background-color: var(--app-background);
   display: grid;
   grid-template-columns: $s-40 $s-256 1fr;
