--- a/frontend/src/app/main/ui/dashboard/projects.scss
+++ b/frontend/src/app/main/ui/dashboard/projects.scss
@@ -44,6 +44,11 @@
   --actions-opacity: 1;
 }
 
+.projects-container {
+  display: grid;
+  grid-auto-rows: min-content;
+}
+
 .project {
   display: flex;
   flex-direction: row;
