--- a/frontend/src/app/main/ui/workspace/top_toolbar.scss
+++ b/frontend/src/app/main/ui/workspace/top_toolbar.scss
@@ -9,7 +9,8 @@
 .main-toolbar {
   cursor: initial;
   position: absolute;
-  left: calc(50% - $s-160);
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -23,13 +24,19 @@
     top 0.3s,
     height 0.3s,
     opacity 0.3s;
-  &:not(.main-toolbar-hidden) {
-    top: $s-28;
-  }
+
+  --toolbar-position-y: #{$s-28};
+  --toolbar-offset-y: 0px;
+  top: calc(var(--toolbar-position-y) + var(--toolbar-offset-y));
+}
+
+.main-toolbar-no-rulers {
+  --toolbar-position-y: 0px;
+  --toolbar-offset-y: #{$s-8};
 }
 
 .main-toolbar-hidden {
-  top: $s-24;
+  --toolbar-offset-y: -#{$s-4};
   height: $s-16;
   z-index: $z-index-1;
   border-radius: 0 0 $s-8 $s-8;
@@ -85,13 +92,6 @@
     padding: 0;
     border-radius: $s-4;
     background-color: var(--palette-handler-background-color);
-  }
-}
-
-.main-toolbar.not-rulers-present {
-  top: $s-8;
-  &.hidden-toolbar {
-    top: $s-0;
   }
 }
 
