:sparkles: Add new copies to the release modal

--- a/frontend/src/app/main/ui/releases/v2_0.scss
+++ b/frontend/src/app/main/ui/releases/v2_0.scss
@@ -76,6 +76,14 @@
   color: var(--modal-text-foreground-color);
 }
 
+.feature-list {
+  @include bodyMediumTypography;
+  color: var(--modal-text-foreground-color);
+  list-style: disc;
+  display: grid;
+  gap: $s-8;
+}
+
 .navigation {
   width: 100%;
   display: grid;
