--- a/frontend/src/app/main/ui/comments.scss
+++ b/frontend/src/app/main/ui/comments.scss
@@ -142,10 +142,14 @@
 // thread-content
 .thread-content {
   position: absolute;
-  pointer-events: auto;
-  user-select: text;
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
   width: $s-284;
   padding: $s-12;
+  padding-inline-end: 0;
+
+  pointer-events: auto;
+  user-select: text;
   border-radius: $br-8;
   border: $s-2 solid var(--modal-border-color);
   background-color: var(--comment-modal-background-color);
