--- a/frontend/src/app/main/ui/dashboard/templates.scss
+++ b/frontend/src/app/main/ui/dashboard/templates.scss
@@ -113,16 +113,11 @@
   grid-template-columns: repeat(auto-fill, minmax($s-276, $s-276));
   grid-auto-flow: column;
   pointer-events: all;
-  /*
-  width: 200%;
   height: $s-228;
   margin-left: $s-6;
-  position: absolute;
   border-top-left-radius: $s-8;
   background-color: $db-quaternary;
-  */
   overflow: scroll hidden;
-
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
   scroll-snap-stop: always;
@@ -136,9 +131,7 @@
   background-color: transparent;
   border: none;
   padding: 0;
-
-  scroll-snap-align: center;
-
+  scroll-snap-align: start;
 }
 
 .template-card {
