:bug: Fix no visual cue if user want to create anotation with only spaces

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/component.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/component.scss
@@ -566,6 +566,13 @@
         }
       }
 
+      &.icon-tick.invalid:hover {
+        cursor: default;
+        svg {
+          stroke: var(--icon-foreground);
+        }
+      }
+
       &.icon-cross:hover,
       &.icon-trash:hover {
         svg {
