Add token placeholder icons

--- a/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
@@ -34,3 +34,11 @@
     opacity: 0.8;
   }
 }
+
+.section-text-icon {
+  font-size: $fs-12;
+  width: 16px;
+  height: 16px;
+  display: flex;
+  place-content: center;
+}
