Add more space between icon and label, fix icon offset

--- a/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
@@ -42,3 +42,9 @@
   display: flex;
   place-content: center;
 }
+
+.section-icon {
+  margin-right: $s-4;
+  // Align better with the label
+  translate: 0px -1px;
+}
