Fix styling of dropdown items?

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
@@ -236,3 +236,10 @@
 .checkbox-button {
   @extend .button-icon;
 }
+
+.token-select {
+  li > span {
+    display: flex;
+    align-content: center;
+  }
+}
