Fix width of drop down

--- a/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
@@ -35,6 +35,11 @@
   .custom-select-dropdown {
     @extend .dropdown-wrapper;
     max-height: $s-320;
+    width: auto;
+    margin-top: $s-4;
+    right: 0;
+    left: auto;
+
     .separator {
       margin: 0;
       height: $s-12;
