Show checkmark icon for applied tokens

--- a/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
@@ -74,6 +74,7 @@
 
       .check-icon {
         @include flexCenter;
+        translate: -$s-4 0;
         svg {
           @extend .button-icon-small;
           visibility: hidden;
