--- a/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
@@ -38,6 +38,19 @@
     margin-bottom: 0;
   }
 
+  .token-pill {
+    background-color: rgb(94 107 120 / 25%);
+    border-radius: $br-4;
+    padding: $s-2 $s-6;
+    text-overflow: ellipsis;
+    flex: 0 0 auto;
+  }
+
+  .token-pill + input {
+    flex: 1 1 auto;
+    width: 0;
+  }
+
   .custom-select-dropdown {
     @extend .dropdown-wrapper;
     max-height: $s-320;
