--- a/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
@@ -9,7 +9,6 @@
 .editable-select {
   @extend .asset-element;
   margin: 0;
-  position: relative;
   display: flex;
   height: calc($s-32 - 2px); // Fixes border being clipped by the input field
   width: 100%;
@@ -62,13 +61,21 @@
     width: 0;
   }
 
+  .custom-select-dropdown-left {
+    left: 0;
+    right: unset;
+  }
+
+  .custom-select-dropdown-right {
+    right: 0;
+    left: unset;
+  }
+
   .custom-select-dropdown {
     @extend .dropdown-wrapper;
     max-height: $s-320;
     width: auto;
     margin-top: $s-4;
-    right: 0;
-    left: unset;
 
     .separator {
       margin: 0;
