Move select styles to select component

--- a/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
@@ -88,6 +88,12 @@
       padding: 0;
       display: flex;
 
+      & > span {
+        display: flex;
+        justify-content: flex-start;
+        align-content: center;
+      }
+
       .label,
       .value {
         width: fit-content;
@@ -100,6 +106,7 @@
 
       .value {
         text-align: right;
+        justify-content: flex-end;
         flex: 0.6;
       }
 
