Show checkmark for applied tokens

--- a/frontend/src/app/main/ui/workspace/tokens/context_menu.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/context_menu.scss
@@ -24,8 +24,19 @@
   background-color: var(--menu-background-color);
   max-height: 100vh;
   overflow-y: auto;
+
+  // TODO: Fixes missing styles from parent context menu
+  li {
+    @include bodySmallTypography;
+    color: var(--menu-foreground-color);
+  }
 }
 
-.token-context-submenu {
-  position: absolute;
+// TODO: Allow selected items wihtout an icon for the context menu
+.empty-icon {
+  width: 0;
+  height: 0;
+}
+.hidden-icon {
+  width: 11px;
 }
