replace 30px with variables

--- a/frontend/src/app/main/ui/workspace/tokens/context_menu.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/context_menu.scss
@@ -33,7 +33,7 @@
 }
 
 .context-list > li:nth-child(-n + 3) > span:first-of-type {
-  margin: 30px;
+  margin: calc(($s-32 + $s-28) / 2);
 }
 
 // TODO: Allow selected items wihtout an icon for the context menu
