Add StyleDictionary as compiled lib

--- a/frontend/resources/templates/index.mustache
+++ b/frontend/resources/templates/index.mustache
@@ -44,6 +44,8 @@
     <div id="app"></div>
     <section id="modal"></section>
 
+    <script src="js/sd.js"></script>
+
     {{# manifest}}
     <script defer src="{{& shared}}"></script>
     <script defer src="{{& main}}"></script>
