Use resolved tokens from style-dictionary

--- a/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
@@ -30,6 +30,7 @@
   }
 
   &.token-pill-invalid {
+    background-color: var(--button-secondary-background-color-rest);
     color: var(--status-color-error-500);
     opacity: 0.8;
   }
