:sparkles: Remove unused css var colors

--- a/frontend/resources/styles/common/base.scss
+++ b/frontend/resources/styles/common/base.scss
@@ -248,7 +248,7 @@ h4 {
 }
 
 hr {
-  border-top: solid 1px $color-gray-60;
+  border-top: solid 1px var(--db-primary);
   border-right: 0;
   border-left: 0;
   border-bottom: 0;
