--- a/frontend/resources/styles/main/partials/workspace.scss
+++ b/frontend/resources/styles/main/partials/workspace.scss
@@ -279,7 +279,7 @@ $height-palette-max: 80px;
   .viewport-actions-container {
     padding-left: 1rem;
     gap: 12px;
-    color: var(--color-gray-60);
+    color: var(--db-primary);
     align-items: center;
     font-size: 12px;
 
