--- a/frontend/resources/styles/common/refactor/color-defs.scss
+++ b/frontend/resources/styles/common/refactor/color-defs.scss
@@ -6,6 +6,11 @@
 
 @use "sass:color";
 
+// TODO: legacy Sass colors, we should eventually try to remove them in
+//       favor of DS colors.
+$color-gray-20: #b1b2b5;
+$color-gray-50: #303236;
+
 :root {
   // DARK
   // Dark background
@@ -13,6 +18,7 @@
   --db-primary-60: #{color.change(#18181a, $alpha: 0.6)};
   --db-secondary: #000000;
   --db-secondary-30: #{color.change(#000000, $alpha: 0.3)};
+  --db-secondary-40: #{color.change(#000000, $alpha: 0.4)};
   --db-secondary-80: #{color.change(#000000, $alpha: 0.8)};
   --db-tertiary: #212426;
   --db-quaternary: #2e3434;
