--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -4,54 +4,17 @@
 //
 // Copyright (c) KALEIDOS INC
 
-// Buttons
+// TODO: These are legacy Sass vars that are now only used in this file.
+//       We should switch them for the new DS tokens.
+$color-gray-40: #64666a;
+$color-gray-60: #1f1f1f;
+$size-4: 1rem;
+$br7: 7px;
+$br25: 25px;
+$br50: 50px;
 
-%btn {
-  appearance: none;
-  align-items: center;
-  border: none;
-  border-radius: $br3;
-  cursor: pointer;
-  display: flex;
-  font-family: "worksans", sans-serif;
-  font-size: $fs12;
-  height: 30px;
-  justify-content: center;
-  min-width: 25px;
-  padding: 0 1rem;
-  transition: all 0.4s;
-  text-decoration: none !important;
-  svg {
-    height: 16px;
-    width: 16px;
-  }
-  &.btn-large {
-    font-size: $fs14;
-    height: 40px;
-    svg {
-      height: 20px;
-      width: 20px;
-    }
-  }
-  &.btn-small {
-    height: 25px;
-  }
-}
-
-.btn-primary {
-  @extend %btn;
-  background: $color-primary;
-  color: $color-black;
-  &:hover,
-  &:focus {
-    background: $color-black;
-    color: $color-primary;
-  }
-}
-
-input[type="button"][disabled],
-.btn-disabled {
-  background-color: $color-gray-10;
+input[type="button"][disabled] {
+  background-color: var(--color-canvas); // TODO: see if we can remove this whole selector
   color: $color-gray-40;
   pointer-events: none;
 }
@@ -75,7 +38,7 @@ input[type="checkbox"] {
 }
 
 .form-errors {
-  color: $color-danger;
+  color: var(--status-color-warning-500);
 }
 
 // Input slidebar
