--- a/frontend/resources/styles/main/partials/workspace.scss
+++ b/frontend/resources/styles/main/partials/workspace.scss
@@ -4,6 +4,10 @@
 //
 // Copyright (c) KALEIDOS INC
 
+// TODO: legacy sass vars. To be removed in favor of DS tokens
+$br3: 3px;
+$br4: 4px;
+
 $width-left-toolbar: 48px;
 
 $width-settings-bar: 256px;
@@ -18,7 +22,7 @@ $height-palette-max: 80px;
   width: 100vw;
   height: 100%;
   user-select: none;
-  background-color: $color-canvas;
+  background-color: var(--color-canvas);
   display: grid;
   grid-template-areas:
     "header header header header"
@@ -69,7 +73,7 @@ $height-palette-max: 80px;
 }
 
 .workspace-content {
-  background-color: $color-canvas;
+  background-color: var(--color-canvas);
   display: flex;
   padding: 0;
   margin: 0;
@@ -96,7 +100,7 @@ $height-palette-max: 80px;
   }
 
   .coordinates {
-    background-color: $color-dark-bg;
+    background-color: var(--db-primary);
     border-radius: $br3;
     bottom: 0px;
     padding-left: 5px;
@@ -114,16 +118,16 @@ $height-palette-max: 80px;
     }
 
     span {
-      color: $color-white;
+      color: var(--df-primary);
       font-size: $fs12;
       padding-right: 5px;
     }
   }
 
   .cursor-tooltip {
-    background-color: $color-dark-bg;
+    background-color: var(--db-secondary-40);
     border-radius: $br3;
-    color: $color-white;
+    color: var(--df-primary);
     font-size: $fs12;
     padding: 3px 8px;
     transition: none;
@@ -208,7 +212,7 @@ $height-palette-max: 80px;
     z-index: 13;
 
     rect {
-      fill: $color-canvas;
+      fill: var(--color-canvas);
     }
     path {
       stroke: $color-gray-20;
@@ -223,7 +227,7 @@ $height-palette-max: 80px;
     z-index: 13;
 
     rect {
-      fill: $color-canvas;
+      fill: var(--color-canvas);
     }
     path {
       stroke: $color-gray-20;
@@ -264,12 +268,11 @@ $height-palette-max: 80px;
   z-index: 12;
   pointer-events: none;
 
-  .path-actions,
   .viewport-actions-container {
     pointer-events: initial;
     display: flex;
     flex-direction: row;
-    background: white;
+    background: var(--app-white);
     border-radius: $br3;
     padding: 0.5rem;
     border: 1px solid $color-gray-20;
@@ -301,63 +304,5 @@ $height-palette-max: 80px;
     display: flex;
     flex-direction: row;
     border-right: 1px solid $color-gray-20;
-  }
-
-  .viewport-actions-entry {
-    width: 28px;
-    height: 28px;
-    margin: 0 0.25rem;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: $br3;
-
-    svg {
-      pointer-events: none;
-      width: 20px;
-      height: 20px;
-    }
-
-    &:hover svg {
-      fill: $color-primary;
-    }
-
-    &.is-disabled {
-      cursor: initial;
-      svg {
-        fill: $color-gray-20;
-      }
-    }
-
-    &.is-toggled {
-      background: $color-black;
-
-      svg {
-        fill: $color-primary;
-      }
-    }
-  }
-
-  .viewport-actions-entry-wide {
-    width: 27px;
-    height: 20px;
-
-    svg {
-      width: 27px;
-      height: 20px;
-    }
-  }
-
-  .path-actions > :first-child .viewport-actions-entry {
-    margin-left: 0;
-  }
-
-  .path-actions > :last-child {
-    border: none;
-  }
-
-  .path-actions > :last-child .viewport-actions-entry {
-    margin-right: 0;
   }
 }
