:sparkles: Remove color-danger from colors css

--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -30,7 +30,7 @@ input[type="checkbox"] {
 }
 
 .form-errors {
-  color: $color-danger;
+  color: var(--status-color-warning-500);
 }
 
 // Input slidebar
