:sparkles: Remove color-dark-bg from colors css

--- a/frontend/resources/styles/main/partials/workspace.scss
+++ b/frontend/resources/styles/main/partials/workspace.scss
@@ -121,7 +121,7 @@ $height-palette-max: 80px;
   }
 
   .cursor-tooltip {
-    background-color: $color-dark-bg;
+    background-color: var(--db-secondary-40);
     border-radius: $br3;
     color: var(--df-primary);
     font-size: $fs12;
