:sparkles: Remove unused btn-disabled selector from framework css

--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -4,8 +4,7 @@
 //
 // Copyright (c) KALEIDOS INC
 
-input[type="button"][disabled],
-.btn-disabled {
+input[type="button"][disabled] {
   background-color: $color-gray-10;
   color: $color-gray-40;
   pointer-events: none;
