--- a/frontend/resources/styles/common/base.scss
+++ b/frontend/resources/styles/common/base.scss
@@ -4,6 +4,18 @@
 //
 // Copyright (c) KALEIDOS INC
 
+// TODO: Legacy sass vars. We should use DS tokens.
+$fs12: 0.75rem;
+$fs18: 1.125rem;
+$fs24: 1.5rem;
+$fs34: 2.125rem;
+$fs44: 2.75rem;
+$fw300: 300;
+$fw500: 500;
+$fw700: 700;
+$lh-115: 1.15;
+$lh-133: 1.33;
+
 :root {
   --font-family: "worksans", sans-serif;
 }
