:sparkles: Remove unused legacy sass files

--- a/frontend/resources/styles/common/base.scss
+++ b/frontend/resources/styles/common/base.scss
@@ -5,6 +5,7 @@
 // Copyright (c) KALEIDOS INC
 
 // TODO: Legacy sass vars. We should use DS tokens.
+$color-gray-50: #303236;
 $fs12: 0.75rem;
 $fs18: 1.125rem;
 $fs24: 1.5rem;
